# xp-reader

./: README.md  package-lock.json  package.json  tailwind.config.js
llm-reader-lib/: Cargo.toml
llm-reader-lib/src/: chatbot.rs  constants.rs  error.rs  lib.rs  main.rs
src/: App.js  index.css  output.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/editor/: index.js
src/components/reader/: index.js  main.css
src/components/translation-popover/: index.js  main.css
src/helpers/: index.js
src/hooks/: useTranslation.js
src/pages/read_old/: index.js  read-page.css
src/pages/reader/: index.js
src/pages/write/: index.js
src/state/: actions.js  const.js
