[package]
name = "llm_reader_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
ollama-rs = { version = "0.2", features = ["stream", "chat-history"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
